--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home page</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
+{% block content %}
     <h1>Home page</h1>
-</body>
-</html>
+    {% for post in posts %}
+        <article>
+            <h2>{{ post.title }}</h2>
+            <h3>{{ post.author }}</h3>
+            <p>{{ post.content }}</p>
+            <p>{{ post.date_posted }}</p>
+        </article>
+    {% endfor %}
+{% endblock %}
