--- a/airline/templates/base.html
+++ b/airline/templates/base.html
@@ -1,17 +1,21 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-        <title>Airline | {{ title}}</title>
-    {% else %}
-        <title>Airline</title>
-    {% endif %}
-</head>
-<body>
-    <div class="container">
+    <head>
+        <meta charset="UTF-8" />
+        {% if title %}
+        <title>Hello | {{ title }}</title>
+        {% else %}
+        <title>Hello</title>
+        {% endif %}
+<!--        bootstrap css link-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
+<!--        custom css styles link -->
+        <link rel="stylesheet" href="{% static 'flights/styles.css' %}"/>
+    </head>
+    <body>
         {% block content %}
         {% endblock %}
-    </div>
-</body>
+    </body>
 </html>
