--- a/airline/templates/flights/flight_list.html
+++ b/airline/templates/flights/flight_list.html
@@ -5,8 +5,9 @@
         <h1>Flight List</h1>
         {% if flights %}
             {% for flight in flights %}
-                <div class="col-md-6 mb-4">
-                    <div class="card">
+                <div class="col mb-4">
+                   <a href="{% url 'flight_details' flight.id %}" style="text-decoration: none; color: inherit;">
+                        <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Flight {{ flight.flight_number }}</h5>
                             <p class="card-text">
@@ -17,6 +18,7 @@
                             </p>
                         </div>
                     </div>
+                   </a>
                 </div>
             {% endfor %}
         {% else %}
