--- a/airline/templates/flights/flight_details.html
+++ b/airline/templates/flights/flight_details.html
@@ -32,5 +32,44 @@
             </table>
         </div>
     </div>
+    <h1>Passengers</h1>
+    <div class="row">
+        <div class="col-md-8">
+            {% if passengers %}
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for passenger in passengers %}
+                    <tr>
+                        <td>{{ passenger.first_name }}</td>
+                        <td>{{ passenger.last_name }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <p>No passengers booked for this flight.</p>
+            {% endif %}
+        </div>
+    </div>
+    <h1>Add Passenger</h1>
+    <form method="post" action="{% url 'book' flight.id %}">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="passenger">Select Passenger:</label>
+            <select class="form-control" id="passenger" name="passenger_id" required>
+                {% for passenger in non_passengers %}
+                <option value="{{ passenger.id }}">{{ passenger.first_name }} {{ passenger.last_name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <input class="btn btn-primary" type="submit" value="Add Passenger">
+    </form>
+    <a href="{% url 'flight_list' %}" class="btn btn-secondary mt-3">Back to Flight List</a>
 </div>
 {% endblock %}
