--- a/hello/templates/layout.html
+++ b/hello/templates/layout.html
@@ -34,6 +34,10 @@
                   <a class="nav-link" href="{% url 'hello_world' %}">HelloWorld</a>
                 </li>
 
+                  <li class="nav-item">
+                  <a class="nav-link" href="{% url 'challenges' %}">Challenges</a>
+                </li>
+
                 <li class="nav-item">
                     <li><a class="nav-link" href="{% url 'tasks:tasks' %}">All Tasks</a></li>
                 </li>
