--- a/hello/templates/challenges/challenge.html
+++ b/hello/templates/challenges/challenge.html
@@ -2,5 +2,6 @@
 {% block content %}
 <div class="container">
     <h1>{{ text }}</h1>
+    <a href="{% url 'challenges' %}">Challenges</a>
 </div>
 {% endblock %}
