--- a/hello/templates/challenges/challenges.html
+++ b/hello/templates/challenges/challenges.html
@@ -1,6 +1,13 @@
 {% extends 'layout.html'%}
 {% block content %}
 <div class="container">
-        <h1>Challenges</h1>
+    <h1>Challenges</h1>
+    <ul>
+        {% for month in months %}
+        <li>
+            <a href="{% url 'challenge' month %}">{{ month }}</a>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock %}
