--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Challenge</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html'%} {% block content %}
+<div class="container">
+    <h1>{{ text }}</h1>
+    <a href="{% url 'challenges' %}">Challenges</a>
+</div>
+{% endblock %}
