--- a/monthly_challenges/templates/base.html
+++ b/monthly_challenges/templates/base.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         {% if title %}
-        <title>Hello | {{ title }}</title>
+        <title>Challenges | {{ title }}</title>
         {% else %}
-        <title>Hello</title>
+        <title>Challenges</title>
         {% endif %}
         <!--        bootstrap css link-->
         <link
