--- a/monthly_challenges/challenges/templates/challenges/challenges.html
+++ b/monthly_challenges/challenges/templates/challenges/challenges.html
@@ -1,5 +1,9 @@
 {% extends 'base.html'%}
+<!-- title -->
+{% block title %}Challenges{% endblock %}
+<!-- start of the content -->
 {% block content %}
+
 <div class="container">
     <h1>Challenges</h1>
     <ul>
